--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Heroes -- Juvenile literature'
 - !lcc 'PZ'
+- GITenberg
 tableOfContents: The Royal Oak -- Bonnie Prince Charlie -- Nelson and Hardy -- Watt
   and the kettle -- Queen Victoria and her soldiers -- The relief of Lucknow -- Grace
   Darling -- David Livingstone -- The battle of Waterloo -- The charge of the Light
